# emotional-intelligence-llm

./: .env.example  .github_short_description.txt  .gitignore  GITHUB_DESCRIPTION.md  README.md  README_STRUCTURE.md  RESULTS.md  SECURITY.md  analyze_and_visualize.py  ei_analysis_report.md  ei_analyzer.py  ei_framework.py  pyproject.toml  quick_ei_test.py  requirements.txt  run_comprehensive_tests.py  save_results.py  setup.py  test_all_dimensions.py  test_all_verbose.py  test_verbose.py
docs/: README_PYTHON.md
docs/methodology/: emotion_detection.md
examples/: advanced_analysis.py  basic_usage.py  emotional_intelligence_test.ipynb
scripts/: __init__.py  run_evaluation.py
src/ei_framework/: __init__.py  ei_config.py  ei_improved_framework.py
src/tests/: test_all_verbose.py
